<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content" tools:context="girondins.economycheck.InputFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:layout_gravity="center"
        android:id="@+id/inputChoiceID" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:layout_gravity="center"
            android:id="@+id/amountId"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prodName"
            android:id="@+id/prodNameID" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dayID"
            android:maxLength="2"
            android:hint="@string/day"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monthID"
            android:maxLength="2"
            android:hint="@string/month"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearID"
            android:hint="@string/year"/>


    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:id="@+id/categoryListID"
        android:layout_weight="0.29" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirmTextID"
        android:layout_gravity="center"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/confirmTxtBtn"
        android:layout_gravity="center" />

</LinearLayout>
